# mlops-assignment

./: .coverage  .coveragerc  .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  supervisord.conf
.dvc/: config
.github/workflows/: ci-cd.yml  ci-cd.yml.backup  ci.yml  cicd.yml  data-driven-cicd.yml  data-driven-cicd.yml.backup  data-driven-training.yml
api/: main.py  schema.py
data/: make_dataset.py
data/raw/: iris.csv.dvc
models/: auto_promote.py  evaluate_model.py  promote_model.py  train.py
models/production_model/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml  enhanced-dashboard.json  mlops-dashboard.json  mlops-model-dashboard.json
monitoring/grafana/datasources/: prometheus.yml
scripts/: promote_to_production.py  promote_to_staging.py  train_on_data_update.py
tests/: conftest.py  test_api.py  test_model_evaluation.py
tests/integration/: test_end_to_end.py
ui/: app.py
