[project]
name = "mlops-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.61.0",
    "dvc-gdrive>=3.0.1",
    "mlflow>=3.1.4",
    "pandas>=2.3.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.1",
]
