[project]
name = "mlops-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "dvc>=3.61.0",
    "dvc-gdrive>=3.0.1",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "mlflow>=3.1.4",
    "mypy>=1.17.1",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "pre-commit>=4.2.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.1",
    "types-requests>=2.32.4.20250611",
    "types-setuptools>=80.9.0.20250801",
]
